[gd_scene load_steps=9 format=3 uid="uid://cov08upbfu3cr"]

[ext_resource type="Texture2D" uid="uid://ccsg14ftvl2rv" path="res://Assets/textures/bg.png" id="1_oa27r"]
[ext_resource type="Script" path="res://Scripts/game.gd" id="1_pdmm7"]
[ext_resource type="PackedScene" uid="uid://dlsbh2xewi6kq" path="res://Scenes/hud.tscn" id="2_1yl81"]
[ext_resource type="PackedScene" uid="uid://dav1arpax604o" path="res://Scenes/player.tscn" id="2_ywebx"]
[ext_resource type="PackedScene" uid="uid://ctvci81raas5m" path="res://Scenes/enemy_spawner.tscn" id="3_8usvb"]
[ext_resource type="AudioStream" uid="uid://c48vbbo66d1lm" path="res://Assets/audio/hit.wav" id="6_j0tje"]
[ext_resource type="AudioStream" uid="uid://cxcagflkn1ckx" path="res://Assets/audio/explode.wav" id="7_es27l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_48w5u"]
size = Vector2(104, 382.449)

[node name="Game" type="Node2D"]
script = ExtResource("1_pdmm7")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_1yl81")]

[node name="Background" type="TextureRect" parent="."]
offset_right = 1283.0
offset_bottom = 727.0
texture = ExtResource("1_oa27r")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_ywebx")]
position = Vector2(49, 366)

[node name="EnemySpawner" parent="." instance=ExtResource("3_8usvb")]

[node name="Deathzone" type="Area2D" parent="."]
position = Vector2(-233, 11)
scale = Vector2(1, 1.96)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathzone"]
position = Vector2(42, 181.225)
shape = SubResource("RectangleShape2D_48w5u")

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_j0tje")

[node name="PlayerTakeDamage" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_es27l")

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="path_enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_path_enemy_spawned"]
[connection signal="area_entered" from="Deathzone" to="." method="_on_deathzone_area_entered"]
